--- a/librewolf/chrome/addons.css
+++ b/librewolf/chrome/addons.css
@@ -1,6 +1,6 @@
 /* You can find an updated version here: https://github.com/Izheil/Quantum-Nox-Firefox-Dark-Full-Theme */
 /* Made by Izheil */
-/* Last updated: 16/11/2021 */
+/* Last updated: 28/11/2021 */
 
 /*------ HOW TO MAKE THE ADDON THEMES WORK ------*/
 /* To use this part of the code, you will have to find the dynamic UUID of your extensions, and replace it where the 
@@ -91,7 +91,7 @@ a:active {color: #0050dd !important}
 
 /*------ COOKIE AND HISTORY AUTODELETE ADDONS ------*/
 @-moz-document url-prefix(moz-extension://TYPE-UUID-OF-HISTORY-AUTODELETE-ADDON-HERE/),
-url-prefix(moz-extension://3e210ac8-733c-4e65-a0b5-416a78ca39b2/) {
+url-prefix(moz-extension://TYPE-UUID-OF-COOKIE-AUTODELETE-ADDON-HERE/) {
 #layout, body {background: #15181d !important; color: #ccc !important}
 
 h2, h1 {color: #fff !important}
@@ -690,39 +690,52 @@ select .menulist-dropmarker {display: none}
 
 /*------ MULTI-ACCOUNTS CONTAINER ADDON ------*/
 @-moz-document url-prefix(moz-extension://TYPE-UUID-OF-MULTI-ACCOUNTS-CONTAINER-ADDON-HERE/) {
-html, body, .delete-container {background-color: #333 !important}
+  html, body, .panel, .collapsible-content, .proxy-section {background-color: #333 !important}
 
-h3, legend {color: #fff !important}
-span:not(#current-container), #container-info-movetabs,
-.container-info-tab-title, .truncate-text {color: #ccc !important}
-
-hr, #manage-containers-link, #edit-container-panel-name-input, .delete-container {border-color: #555 !important}
-
-#manage-containers-link, .cancel-button, #deny, #delete-container-button {
-  background-color: #444 !important;
-  color: #ccc !important}
-
-#manage-containers-link:hover, .cancel-button:hover, .hover-highlight:focus, #deny:hover,
-#delete-container-button:hover {
-  background-color: #555 !important;
-  color: #fff !important}
-
-.menu-item:hover {
-  background-color: #444 !important;
-  color: #fff !important;
-}
-
-.onboarding-title {color: #fff !important}
-
-.achievement-panel p, .onboarding p, .container-options .options-label {color: #ccc !important}
-
-.radio-choice > .radio-container > [type="radio"]:checked + label {
-  background-color: #222 !important}
-
-.btn-return.arrow-left {background-color: transparent !important}
-
-.info-icon, .menu:not(#identities-list):not(#picker-identities-list):not(#edit-sites-assigned) .menu-icon, 
-.menu-arrow > img, .btn-return.arrow-left {filter: invert(80%)}
+  h3, legend {color: #fff !important}
+  span:not(#current-container), #container-info-movetabs,
+  .container-info-tab-title, .truncate-text {color: #ccc !important}
+  
+  hr, #manage-containers-link, #edit-container-panel-name-input {border-color: #555 !important}
+  
+  #edit-container-panel-name-input {
+    background-color: #252525 !important;
+  }
+  
+  #manage-containers-link, .cancel-button, #deny, #manage-container-link, #delete-container-button {
+    background-color: #444 !important;
+    color: #ccc !important}
+  
+  #manage-containers-link:hover, .cancel-button:hover, .hover-highlight:focus, #deny:hover,
+  #manage-container-link:hover, #delete-container-button:hover {
+    background-color: #555 !important;
+    color: #fff !important}
+  
+  .slider {
+    --grey30: #444 !important;
+    --grey40: #505050 !important;
+  }
+  
+  .menu-item:hover {
+    background-color: #444 !important;
+    color: #fff !important}
+  
+  #new-container .menu-icon {
+    filter: brightness(200%) !important}
+  
+  .onboarding-title {color: #fff !important}
+  
+  .achievement-panel p, .onboarding p {color: #ccc !important}
+  
+  .radio-choice > .radio-container > [type="radio"]:checked + label {
+    background-color: #222 !important}
+  
+  .btn-return.arrow-left {
+    background-color: transparent !important;
+    filter: brightness(200%)}
+  
+  .info-icon, .menu:not(#identities-list):not(#picker-identities-list):not(#new-container) .menu-icon, 
+  .menu-arrow > img {filter: invert(80%)}
 }
 
 @-moz-document url-prefix(moz-extension://TYPE-UUID-OF-MULTI-ACCOUNTS-CONTAINER-ADDON-HERE/options.html) {
@@ -1208,7 +1221,7 @@ label::before, .ui.popup {filter: invert(75%)}
 }
 
 /*------ UBLOCK ORIGIN BLOCKING PAGE ------*/
-@-moz-document url-prefix(moz-extension://549ff223-a460-4a9d-a651-b486a6b98c9f/document-blocked.html){
+@-moz-document url-prefix(moz-extension://TYPE-UUID-OF-UBLOCK-ORIGIN-ADDON-HERE/document-blocked.html){
 
 html, body, .code {background-color: #222 !important}
 
@@ -1235,7 +1248,7 @@ button:hover {
 }
 
 /*------ UBLOCK ORIGIN CONTROL PANEL TOP BUTTONS ------*/
-@-moz-document url-prefix(moz-extension://549ff223-a460-4a9d-a651-b486a6b98c9f/dashboard.html) {
+@-moz-document url-prefix(moz-extension://TYPE-UUID-OF-UBLOCK-ORIGIN-ADDON-HERE/dashboard.html) {
 
 #dashboard-nav {background: #222 !important; border-bottom: 1px solid black !important}
 
@@ -1248,7 +1261,7 @@ button:hover {
 }
 
 /*------ UBLOCK ORIGIN CONTROL PANEL CONTENT PAGES ------*/
-@-moz-document url-prefix(moz-extension://549ff223-a460-4a9d-a651-b486a6b98c9f/) {
+@-moz-document url-prefix(moz-extension://TYPE-UUID-OF-UBLOCK-ORIGIN-ADDON-HERE/) {
 html:not(#ublock0-epicker) > body, html:not(#ublock0-epicker), #actions {
   background: #333 !important;
   color: #ccc !important;
@@ -1280,7 +1293,7 @@ a:active {color: #0050aa !important}
 .listEntry .fa-icon.status.cache:hover
   {fill: #fff !important}
 
-#ruleFilter .fa-icon svg {fill: #ccc !important}
+#ruleFilter .fa-icon svg, #frameURL .fa-icon svg {fill: #ccc !important}
 
 .resultsetModifier > span > span:nth-of-type(1),
 .resultsetModifier > span > span:nth-of-type(2) {
@@ -1460,7 +1473,7 @@ select .menulist-dropmarker {display: none}
     color: #ddd !important}
 
 /*------ UBLOCK ORIGIN MENU POPUP ------*/
-@-moz-document url-prefix(moz-extension://549ff223-a460-4a9d-a651-b486a6b98c9f/popup.html) {
+@-moz-document url-prefix(moz-extension://TYPE-UUID-OF-UBLOCK-ORIGIN-ADDON-HERE/popup.html) {
 
 #appinfo {background: #111 !important}
 
@@ -1517,7 +1530,7 @@ span[data-i18n-tip="popupTipRevertRules"], span[data-i18n-tip="popupTipSaveRules
 #firewallContainer > div {border: none !important}
 }
 
-@-moz-document url-prefix(moz-extension://549ff223-a460-4a9d-a651-b486a6b98c9f/popup-fenix.html) {
+@-moz-document url-prefix(moz-extension://TYPE-UUID-OF-UBLOCK-ORIGIN-ADDON-HERE/popup-fenix.html) {
 #sticky {
   background: #333 !important}
 
@@ -1567,7 +1580,7 @@ body.off #switch .fa-icon {fill: #222}
 }
 
 /*------ UBLOCK ORIGIN UI LOGGER ------*/
-@-moz-document url-prefix(moz-extension://549ff223-a460-4a9d-a651-b486a6b98c9f/logger-ui.html) {
+@-moz-document url-prefix(moz-extension://TYPE-UUID-OF-UBLOCK-ORIGIN-ADDON-HERE/logger-ui.html) {
 
 body, .permatoolbar, .vscrollable, table, html {background: #222 !important}
 
